plasma-lab-src/fr.inria.plasmalab.root/fr.inria.plasmalab.gcsl/src/main/java/fr/inria/plasmalab/gcsl/tools/PRISMGrammarParser.java
/**
 * This file is part of fr.inria.plasmalab.gcsl.
 *
 * fr.inria.plasmalab.gcsl is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Lesser General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * fr.inria.plasmalab.gcsl is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public License
 * along with fr.inria.plasmalab.gcsl.  If not, see <http://www.gnu.org/licenses/>.
 */
// $ANTLR 3.5 /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g 2015-02-20 11:14:42

package fr.inria.plasmalab.gcsl.tools;

import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class PRISMGrammarParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "Comment", "Ident", "Integer", 
		"WS", "'!'", "'!='", "'\"'", "'&'", "'('", "')'", "'*'", "'+'", "','", 
		"'-'", "'->'", "'.'", "'..'", "'/'", "':'", "';'", "'<'", "'<='", "'='", 
		"'=>'", "'>'", "'>='", "'?'", "'E'", "'['", "'\\''", "']'", "'bool'", 
		"'const'", "'double'", "'dtmc'", "'e'", "'endmodule'", "'endrewards'", 
		"'false'", "'formula'", "'global'", "'init'", "'int'", "'label'", "'max'", 
		"'mdp'", "'min'", "'module'", "'probabilistic'", "'rewards'", "'true'", 
		"'|'"
	};
	public static final int EOF=-1;
	public static final int T__8=8;
	public static final int T__9=9;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int Comment=4;
	public static final int Ident=5;
	public static final int Integer=6;
	public static final int WS=7;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public PRISMGrammarParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public PRISMGrammarParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return PRISMGrammarParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g"; }



	  public Model model;

	  public Model parseModel(){
	    model = new Model();
	    try {
	      this.reactive_modules();
	    } catch (RecognitionException e) {
	      // TODO Auto-generated catch block
	      e.printStackTrace();
	    }
	      return model;
	    }
	  


	// $ANTLR start "reactive_modules"
	// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:35:1: reactive_modules : ( model_element )+ EOF ;
	public final void reactive_modules() throws RecognitionException {
		try {
			// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:35:17: ( ( model_element )+ EOF )
			// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:35:19: ( model_element )+ EOF
			{
			// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:35:19: ( model_element )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==36||LA1_0==38||(LA1_0 >= 43 && LA1_0 <= 44)||LA1_0==47||LA1_0==49||(LA1_0 >= 51 && LA1_0 <= 53)) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:35:20: model_element
					{
					pushFollow(FOLLOW_model_element_in_reactive_modules48);
					model_element();
					state._fsp--;

					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			match(input,EOF,FOLLOW_EOF_in_reactive_modules52); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "reactive_modules"



	// $ANTLR start "model_element"
	// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:37:1: model_element : ( constant | global | module | rewards | formula | label | ( 'dtmc' | 'probabilistic' ) | 'mdp' );
	public final void model_element() throws RecognitionException {
		try {
			// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:37:14: ( constant | global | module | rewards | formula | label | ( 'dtmc' | 'probabilistic' ) | 'mdp' )
			int alt2=8;
			switch ( input.LA(1) ) {
			case 36:
				{
				alt2=1;
				}
				break;
			case 44:
				{
				alt2=2;
				}
				break;
			case 51:
				{
				alt2=3;
				}
				break;
			case 53:
				{
				alt2=4;
				}
				break;
			case 43:
				{
				alt2=5;
				}
				break;
			case 47:
				{
				alt2=6;
				}
				break;
			case 38:
			case 52:
				{
				alt2=7;
				}
				break;
			case 49:
				{
				alt2=8;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:38:3: constant
					{
					pushFollow(FOLLOW_constant_in_model_element61);
					constant();
					state._fsp--;

					}
					break;
				case 2 :
					// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:39:5: global
					{
					pushFollow(FOLLOW_global_in_model_element67);
					global();
					state._fsp--;

					}
					break;
				case 3 :
					// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:40:5: module
					{
					pushFollow(FOLLOW_module_in_model_element74);
					module();
					state._fsp--;

					}
					break;
				case 4 :
					// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:41:5: rewards
					{
					pushFollow(FOLLOW_rewards_in_model_element80);
					rewards();
					state._fsp--;

					}
					break;
				case 5 :
					// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:42:5: formula
					{
					pushFollow(FOLLOW_formula_in_model_element87);
					formula();
					state._fsp--;

					}
					break;
				case 6 :
					// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:43:5: label
					{
					pushFollow(FOLLOW_label_in_model_element93);
					label();
					state._fsp--;

					}
					break;
				case 7 :
					// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:44:5: ( 'dtmc' | 'probabilistic' )
					{
					if ( input.LA(1)==38||input.LA(1)==52 ) {
						input.consume();
						state.errorRecovery=false;
					}
					else {
						MismatchedSetException mse = new MismatchedSetException(null,input);
						throw mse;
					}
					}
					break;
				case 8 :
					// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:45:5: 'mdp'
					{
					match(input,49,FOLLOW_49_in_model_element113); 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "model_element"



	// $ANTLR start "label"
	// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:47:1: label : 'label' string '=' implication ';' ;
	public final void label() throws RecognitionException {
		try {
			// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:47:6: ( 'label' string '=' implication ';' )
			// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:47:8: 'label' string '=' implication ';'
			{
			match(input,47,FOLLOW_47_in_label121); 
			pushFollow(FOLLOW_string_in_label123);
			string();
			state._fsp--;

			match(input,26,FOLLOW_26_in_label125); 
			pushFollow(FOLLOW_implication_in_label127);
			implication();
			state._fsp--;

			match(input,23,FOLLOW_23_in_label128); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "label"



	// $ANTLR start "formula"
	// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:49:1: formula : 'formula' Ident '=' ite ';' ;
	public final void formula() throws RecognitionException {
		try {
			// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:49:8: ( 'formula' Ident '=' ite ';' )
			// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:49:10: 'formula' Ident '=' ite ';'
			{
			match(input,43,FOLLOW_43_in_formula137); 
			match(input,Ident,FOLLOW_Ident_in_formula139); 
			match(input,26,FOLLOW_26_in_formula141); 
			pushFollow(FOLLOW_ite_in_formula143);
			ite();
			state._fsp--;

			match(input,23,FOLLOW_23_in_formula145); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "formula"



	// $ANTLR start "constant"
	// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:51:1: constant : 'const' (| 'int' | 'double' | 'bool' ) Ident ( '=' numerical )? ';' ;
	public final void constant() throws RecognitionException {
		try {
			// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:51:9: ( 'const' (| 'int' | 'double' | 'bool' ) Ident ( '=' numerical )? ';' )
			// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:51:11: 'const' (| 'int' | 'double' | 'bool' ) Ident ( '=' numerical )? ';'
			{
			match(input,36,FOLLOW_36_in_constant152); 
			// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:51:19: (| 'int' | 'double' | 'bool' )
			int alt3=4;
			switch ( input.LA(1) ) {
			case Ident:
				{
				alt3=1;
				}
				break;
			case 46:
				{
				alt3=2;
				}
				break;
			case 37:
				{
				alt3=3;
				}
				break;
			case 35:
				{
				alt3=4;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}
			switch (alt3) {
				case 1 :
					// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:52:3: 
					{
					}
					break;
				case 2 :
					// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:52:5: 'int'
					{
					match(input,46,FOLLOW_46_in_constant160); 
					}
					break;
				case 3 :
					// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:53:5: 'double'
					{
					match(input,37,FOLLOW_37_in_constant166); 
					}
					break;
				case 4 :
					// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:54:5: 'bool'
					{
					match(input,35,FOLLOW_35_in_constant181); 
					}
					break;

			}

			match(input,Ident,FOLLOW_Ident_in_constant187); 
			// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:56:3: ( '=' numerical )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==26) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:56:4: '=' numerical
					{
					match(input,26,FOLLOW_26_in_constant192); 
					pushFollow(FOLLOW_numerical_in_constant194);
					numerical();
					state._fsp--;

					}
					break;

			}

			match(input,23,FOLLOW_23_in_constant198); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "constant"



	// $ANTLR start "global"
	// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:58:1: global : 'global' Ident ':' ( '[' numerical '..' numerical ( 'init' numerical )? | 'bool' ( 'init' )? implication ) ';' ;
	public final void global() throws RecognitionException {
		try {
			// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:58:7: ( 'global' Ident ':' ( '[' numerical '..' numerical ( 'init' numerical )? | 'bool' ( 'init' )? implication ) ';' )
			// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:58:9: 'global' Ident ':' ( '[' numerical '..' numerical ( 'init' numerical )? | 'bool' ( 'init' )? implication ) ';'
			{
			match(input,44,FOLLOW_44_in_global205); 
			match(input,Ident,FOLLOW_Ident_in_global207); 
			match(input,22,FOLLOW_22_in_global211); 
			// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:59:7: ( '[' numerical '..' numerical ( 'init' numerical )? | 'bool' ( 'init' )? implication )
			int alt7=2;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==32) ) {
				alt7=1;
			}
			else if ( (LA7_0==35) ) {
				alt7=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 7, 0, input);
				throw nvae;
			}

			switch (alt7) {
				case 1 :
					// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:59:9: '[' numerical '..' numerical ( 'init' numerical )?
					{
					match(input,32,FOLLOW_32_in_global215); 
					pushFollow(FOLLOW_numerical_in_global217);
					numerical();
					state._fsp--;

					match(input,20,FOLLOW_20_in_global219); 
					pushFollow(FOLLOW_numerical_in_global221);
					numerical();
					state._fsp--;

					// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:59:37: ( 'init' numerical )?
					int alt5=2;
					int LA5_0 = input.LA(1);
					if ( (LA5_0==45) ) {
						alt5=1;
					}
					switch (alt5) {
						case 1 :
							// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:59:38: 'init' numerical
							{
							match(input,45,FOLLOW_45_in_global223); 
							pushFollow(FOLLOW_numerical_in_global225);
							numerical();
							state._fsp--;

							}
							break;

					}

					}
					break;
				case 2 :
					// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:60:9: 'bool' ( 'init' )? implication
					{
					match(input,35,FOLLOW_35_in_global237); 
					// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:60:16: ( 'init' )?
					int alt6=2;
					int LA6_0 = input.LA(1);
					if ( (LA6_0==45) ) {
						alt6=1;
					}
					switch (alt6) {
						case 1 :
							// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:60:17: 'init'
							{
							match(input,45,FOLLOW_45_in_global240); 
							}
							break;

					}

					pushFollow(FOLLOW_implication_in_global244);
					implication();
					state._fsp--;

					}
					break;

			}

			match(input,23,FOLLOW_23_in_global246); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "global"



	// $ANTLR start "module"
	// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:62:1: module : 'module' Ident ( ( local )* ( command )+ | '=' renaming ) 'endmodule' ;
	public final void module() throws RecognitionException {
		Token Ident1=null;
		ParserRuleReturnScope renaming2 =null;

		try {
			// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:62:7: ( 'module' Ident ( ( local )* ( command )+ | '=' renaming ) 'endmodule' )
			// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:62:9: 'module' Ident ( ( local )* ( command )+ | '=' renaming ) 'endmodule'
			{
			match(input,51,FOLLOW_51_in_module255); 
			Ident1=(Token)match(input,Ident,FOLLOW_Ident_in_module257); 
			String moduleName = (Ident1!=null?Ident1.getText():null);
			// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:63:3: ( ( local )* ( command )+ | '=' renaming )
			int alt10=2;
			int LA10_0 = input.LA(1);
			if ( (LA10_0==Ident||LA10_0==32) ) {
				alt10=1;
			}
			else if ( (LA10_0==26) ) {
				alt10=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 10, 0, input);
				throw nvae;
			}

			switch (alt10) {
				case 1 :
					// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:64:5: ( local )* ( command )+
					{

					      ArrayList<Substitution> subs = new ArrayList<Substitution>();
					    
					// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:67:3: ( local )*
					loop8:
					while (true) {
						int alt8=2;
						int LA8_0 = input.LA(1);
						if ( (LA8_0==Ident) ) {
							alt8=1;
						}

						switch (alt8) {
						case 1 :
							// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:67:4: local
							{
							pushFollow(FOLLOW_local_in_module274);
							local();
							state._fsp--;

							}
							break;

						default :
							break loop8;
						}
					}

					// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:71:6: ( command )+
					int cnt9=0;
					loop9:
					while (true) {
						int alt9=2;
						int LA9_0 = input.LA(1);
						if ( (LA9_0==32) ) {
							alt9=1;
						}

						switch (alt9) {
						case 1 :
							// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:71:7: command
							{
							pushFollow(FOLLOW_command_in_module297);
							command();
							state._fsp--;

							}
							break;

						default :
							if ( cnt9 >= 1 ) break loop9;
							EarlyExitException eee = new EarlyExitException(9, input);
							throw eee;
						}
						cnt9++;
					}


					      model.declareModuleType(moduleName, moduleName, subs);;
					    
					}
					break;
				case 2 :
					// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:75:5: '=' renaming
					{
					match(input,26,FOLLOW_26_in_module311); 
					pushFollow(FOLLOW_renaming_in_module313);
					renaming2=renaming();
					state._fsp--;


					      model.addInstance((renaming2!=null?((PRISMGrammarParser.renaming_return)renaming2).moduleType:null), moduleName, (renaming2!=null?((PRISMGrammarParser.renaming_return)renaming2).subs:null));
					    
					}
					break;

			}

			match(input,40,FOLLOW_40_in_module325); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "module"


	public static class renaming_return extends ParserRuleReturnScope {
		public String moduleType;
		public ArrayList<Substitution> subs;
	};


	// $ANTLR start "renaming"
	// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:81:1: renaming returns [String moduleType, ArrayList<Substitution> subs] : Ident '[' rv1= rename_var ( ',' rv2= rename_var )* ']' ;
	public final PRISMGrammarParser.renaming_return renaming() throws RecognitionException {
		PRISMGrammarParser.renaming_return retval = new PRISMGrammarParser.renaming_return();
		retval.start = input.LT(1);

		Token Ident3=null;
		Substitution rv1 =null;
		Substitution rv2 =null;

		try {
			// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:82:3: ( Ident '[' rv1= rename_var ( ',' rv2= rename_var )* ']' )
			// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:82:5: Ident '[' rv1= rename_var ( ',' rv2= rename_var )* ']'
			{
			Ident3=(Token)match(input,Ident,FOLLOW_Ident_in_renaming339); 
			retval.moduleType = (Ident3!=null?Ident3.getText():null); retval.subs = new ArrayList<Substitution>();
			match(input,32,FOLLOW_32_in_renaming344); 
			pushFollow(FOLLOW_rename_var_in_renaming348);
			rv1=rename_var();
			state._fsp--;


			      retval.subs.add(rv1);
			    
			// /local/ltraonou/Developpement/Plasma/plasma-lab/fr.inria.plasmalab.gcsl/src/main/antlr3/fr/inria/plasmalab/gcsl/tools/PRISMGrammar.g:87:3: ( ',' rv2= rename_var )*
			loop11:
			while (true) {
				int alt11=2;
				int LA11_0 = input.LA(1);
				if ( (LA11_0==16) ) {
					alt11=1;
				}
